chore: cleanup env example

--- a/demos/parse-server-migration/.env.example
+++ b/demos/parse-server-migration/.env.example
@@ -1,24 +1,14 @@
-# Your moralis Api key (keep this secret)
-MORALIS_API_KEY = ''
+# See src/config.ts for details on the .env variables that you can set
+MORALIS_API_KEY = 'replace_me'
 
-# Default port wher parse-server will run on
 PORT = 1337;
-# Replace with a secret key of your choice (keep this secret)
-MASTER_KEY = 'MASTER_KEY'
-# Replace with any id of yout choice
-APPLICATION_ID = 'APPLICATION_ID'
-# Referenece to your server URL. Replace this when your app is hosted
+MASTER_KEY = 'replace_me'
+APPLICATION_ID = 'replace_me'
 SERVER_URL = 'http://localhost:1337/server'
-# Path to your cloud code
 CLOUD_PATH = './build/cloud/main.js'
-# URI to your MongoDB database
 DATABASE_URI = 'mongodb://localhost:27017'
 
-# Connection string for your redis instance in the format of redis://<host>:<port> or redis://<username>:<password>@<host>:<port>
 REDIS_CONNECTION_STRING = 'redis://127.0.0.1:6379'
-# Rate limit window in seconds
 RATE_LIMIT_TTL = 30
-# Rate limit requests per window for authenticated users
 RATE_LIMIT_AUTHENTICATED = 50
-# Rate limit requests per window for anonymous users
 RATE_LIMIT_ANONYMOUS = 20
