--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "@moralisweb3/api-utils": "^2.3.1",
     "@moralisweb3/core": "^2.3.1",
-    "@moralisweb3/evm-utils": "^2.3.1"
+    "@moralisweb3/evm-utils": "^2.3.1",
+    "@moralisweb3/sol-utils": "^2.3.1"
   }
 }
