--- a/packages/codegen/package.json
+++ b/packages/codegen/package.json
@@ -15,6 +15,7 @@
     "@types/inquirer-autocomplete-prompt": "^1.3.3",
     "@types/minimist": "^1.2.2",
     "esmo": "^0.14.1",
+    "handlebars": "^4.7.7",
     "inquirer-autocomplete-prompt": "^2.0.0",
     "lodash": "^4.17.21",
     "plop": "3.1.1",
