--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "format": "yarn prettier . \"**/*.+(js|ts|json)\" --write",
     "format:check": "yarn prettier . \"**/*.+(js|ts|json)\" --check",
     "release": "yarn build && changeset publish",
-    "generate": "yarn nx run @moralisweb3/codegen:generate"
+    "generate:next": "yarn nx run @moralisweb3/codegen:generate"
   },
   "workspaces": {
     "packages": [
