--- a/packages/codegen/package.json
+++ b/packages/codegen/package.json
@@ -7,7 +7,6 @@
   "sideEffects": false,
   "scripts": {
     "lint": "eslint . --ext .js,.ts,.tsx,jsx",
-    "clean": "rm -rf lib && rm -rf tsconfig.tsbuildinfo && rm -rf ./node_modules/.cache/nx",
     "generate": "yarn esmo src/index.ts"
   },
   "devDependencies": {
@@ -18,7 +17,6 @@
     "handlebars": "^4.7.7",
     "inquirer-autocomplete-prompt": "^2.0.0",
     "lodash": "^4.17.21",
-    "plop": "3.1.1",
-    "ts-morph": "^16.0.0"
+    "plop": "3.1.1"
   }
 }
