--- a/packages/codegen/tsconfig.json
+++ b/packages/codegen/tsconfig.json
@@ -5,9 +5,7 @@
     "declarationDir": "./lib/",
     "rootDir": "./src",
     "resolveJsonModule": true,
-    "allowSyntheticDefaultImports": true,
+    "allowSyntheticDefaultImports": true
   },
-  "include": [
-    "src/**/*",
-  ]
+  "include": ["src/**/*"]
 }
