--- a/packages/next/tsconfig.json
+++ b/packages/next/tsconfig.json
@@ -6,9 +6,5 @@
     "rootDir": "./src",
     "resolveJsonModule": true
   },
-  "include": [
-    "src/**/*",
-    "types/**/*",
-    "src/hooks/generated/supportedPaths.json"
-  ]
+  "include": ["src/**/*", "types/**/*", "src/hooks/generated/supportedPaths.json"]
 }
