feat:adding for issue #435

--- a/packages/solApi/tsconfig.json
+++ b/packages/solApi/tsconfig.json
@@ -5,5 +5,5 @@
     "declarationDir": "./lib/",
     "rootDir": "./src"
   },
-  "include": ["src/**/*", "types/**/*"]
+  "include": ["src/**/*", "types/**/*", "getTokenPrice.ts"]
 }
