change evm examples default

--- a/demos/moralis-stream/.env.example
+++ b/demos/moralis-stream/.env.example
@@ -1,7 +1,9 @@
 
-PORT = 1337;
+PORT=3000;
 
-MORALIS_API_KEY = ''
-APP_NAME = 'Demo Express proxy'
+MORALIS_API_KEY=''
+APP_NAME='Demo Moralis streams'
 
-ALLOW_INSECURE_HTTP = 'true'
+ALLOW_INSECURE_HTTP='true'
+
+STREAM_SECRET='secret'
