--- a/demos/moralis-stream/package.json
+++ b/demos/moralis-stream/package.json
@@ -11,7 +11,7 @@
     "moralis": "^2.3.1",
     "ngrok": "^4.3.3",
     "redis": "^4.2.0",
-    "web3": "^1.7.5"
+    "web3-utils": "^1.7.5"
   },
   "devDependencies": {
     "@moralisweb3/eslint-config": "^1.0.0",
@@ -23,7 +23,7 @@
     "typescript": "^4.7.4"
   },
   "scripts": {
-    "dev": "ts-node src/index.ts",
+    "start": "ts-node src/index.ts",
     "build": "tsc",
     "lint": "eslint --ext .js,.ts src"
   }
