--- a/packages/streams/package.json
+++ b/packages/streams/package.json
@@ -31,6 +31,6 @@
     "@moralisweb3/api-utils": "^2.4.0",
     "@moralisweb3/core": "^2.4.0",
     "@moralisweb3/evm-utils": "^2.4.0",
-    "web3-utils": "^1.7.5"
+    "ethereumjs-util": "^7.1.0"
   }
 }
