--- a/packages/streams/package.json
+++ b/packages/streams/package.json
@@ -24,6 +24,7 @@
     "eslint-plugin-jest": "^26.8.3",
     "jest": "^28.0.3",
     "openapi-typescript": "^5.2.0",
+    "@types/ethereumjs-util": "5.2.0",
     "prettier": "^2.5.1",
     "typescript": "^4.5.5"
   },
