--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
       "packages/*",
       "demos/*",
       "demos/firebase-proxy/*",
-      "demos/firebase-auth/*"
+      "demos/firebase-auth/*",
+      "demos/firebase-auth-ext/*"
     ]
   },
   "resolutions": {
