--- a/packages/streams/package.json
+++ b/packages/streams/package.json
@@ -32,6 +32,7 @@
     "@moralisweb3/api-utils": "^2.4.0",
     "@moralisweb3/core": "^2.4.0",
     "@moralisweb3/evm-utils": "^2.4.0",
+    "web3-eth-abi": "^1.8.0",
     "ethereumjs-util": "^7.1.0"
   }
 }
