--- a/demos/firebase-auth-ext/firebase.json
+++ b/demos/firebase-auth-ext/firebase.json
@@ -1,6 +1,8 @@
 {
   "functions": {
-    "ignore": ["node_modules"],
+    "ignore": [
+      "node_modules"
+    ],
     "source": "functions",
     "predeploy": [
       "yarn --cwd \"$RESOURCE_DIR\" install",
@@ -9,7 +11,9 @@
     ]
   },
   "hosting": {
-    "ignore": ["node_modules"],
+    "ignore": [
+      "node_modules"
+    ],
     "public": "hosting/build",
     "predeploy": [
       "yarn --cwd \"$RESOURCE_DIR\" install",
@@ -21,8 +25,5 @@
     "hosting": {
       "port": 5555
     }
-  },
-  "extensions": {
-    "moralis-auth": "moralis/moralis-auth@0.1.0"
   }
 }
