--- a/packages/streams/package.json
+++ b/packages/streams/package.json
@@ -16,7 +16,7 @@
     "test:watch": "yarn run test --watch",
     "lint": "eslint . --ext .js,.ts,.tsx,jsx",
     "clean": "rm -rf lib && rm -rf tsconfig.tsbuildinfo && rm -rf ./node_modules/.cache/nx",
-    "gen:api-types": "openapi-typescript https://streams-api.aws-prod-streams-master-1.moralis.io/api-docs/swagger.json --output src/generated/types.ts",
+    "gen:api-types": "openapi-typescript https://api.moralis-streams.com/api-docs/swagger.json --output src/generated/types.ts",
     "build": "tsc",
     "dev": "tsc --watch"
   },
