--- a/packages/streams/package.json
+++ b/packages/streams/package.json
@@ -21,10 +21,10 @@
     "dev": "tsc --watch"
   },
   "devDependencies": {
+    "@types/ethereumjs-util": "5.2.0",
     "eslint-plugin-jest": "^26.8.3",
     "jest": "^28.0.3",
     "openapi-typescript": "^5.2.0",
-    "@types/ethereumjs-util": "5.2.0",
     "prettier": "^2.5.1",
     "typescript": "^4.5.5"
   },
@@ -32,7 +32,8 @@
     "@moralisweb3/api-utils": "^2.5.1",
     "@moralisweb3/core": "^2.5.1",
     "@moralisweb3/evm-utils": "^2.5.1",
-    "web3-eth-abi": "^1.8.0",
-    "ethereumjs-util": "^7.1.0"
+    "@moralisweb3/streams-typings": "^1.0.0",
+    "ethereumjs-util": "^7.1.0",
+    "web3-eth-abi": "^1.8.0"
   }
 }
