--- a/demos/firebase-auth-ext/hosting/package.json
+++ b/demos/firebase-auth-ext/hosting/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "@ethersproject/providers": "^5.7.1",
+    "@moralisweb3/client-firebase-auth": "^2.4.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -10,14 +12,13 @@
     "@types/node": "^16.11.58",
     "@types/react": "^18.0.19",
     "@types/react-dom": "^18.0.6",
-    "@ethersproject/providers": "^5.7.1",
+    "bs58": "^5.0.0",
     "firebase": "^9.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.8.3",
-    "web-vitals": "^2.1.4",
-    "@moralisweb3/client-firebase-auth": "^2.4.0"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "lint": "eslint --ext .js,.ts ./src",
