--- a/demos/firebase-auth-ext/hosting/.env.example
+++ b/demos/firebase-auth-ext/hosting/.env.example
@@ -1,4 +1,7 @@
-# To get configuration data for your Firebase app enter `firebase apps:sdkconfig` command
+# To get the configuration of your Firebase app:
+# A. execute `firebase apps:sdkconfig` command in the project directory
+# B. open the Firebase Console > Project Settings > General > Your Apps and click Add app > Web app
+
 REACT_APP_FIREBASE_API_KEY=replace_me
 REACT_APP_FIREBASE_AUTH_DOMAIN=replace_me
 REACT_APP_FIREBASE_PROJECT_ID=replace_me
