--- a/packages/evmUtils/package.json
+++ b/packages/evmUtils/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@moralisweb3/evm-utils",
   "author": "Moralis",
-  "version": "2.5.3",
+  "version": "2.4.0",
   "license": "MIT",
   "private": false,
   "main": "./lib/index.js",
@@ -26,7 +26,9 @@
   },
   "dependencies": {
     "@ethersproject/address": "^5.6.0",
+    "@ethersproject/hash": "^5.7.0",
+    "@ethersproject/providers": "^5.7.1",
     "@ethersproject/transactions": "^5.6.0",
-    "@moralisweb3/core": "^2.5.3"
+    "@moralisweb3/core": "^2.4.0"
   }
 }
