chore: update env examples for demos

--- a/demos/nextjs/.env.local.example
+++ b/demos/nextjs/.env.local.example
@@ -1,4 +1,10 @@
-APP_DOMAIN=amazing.finance
-MORALIS_API_KEY=
-NEXTAUTH_URL=http://localhost:3000
-NEXTAUTH_SECRET= # Linux: `openssl rand -hex 32` or go to https://generate-secret.now.sh/32
+# Your domain, used to generate a message for authentication
+APP_DOMAIN = 'amazing.finance'
+
+# Your Moralis Api key, that can be found in the dashboard. Keep this secret!
+MORALIS_API_KEY = ''
+
+NEXTAUTH_URL = 'http://localhost:3000'
+
+# Linux: `openssl rand -hex 32` or go to https://generate-secret.now.sh/32
+NEXTAUTH_SECRET = ''
