--- a/demos/parse-server-migration/.env.example
+++ b/demos/parse-server-migration/.env.example
@@ -1,5 +1,7 @@
 # See src/config.ts for details on the .env variables that you can set
-MORALIS_API_KEY = 'replace_me'
+
+# Your Moralis Api key, that can be found in the dashboard. Keep this secret!
+MORALIS_API_KEY=''
 
 PORT = 1337;
 MASTER_KEY = 'replace_me'
