--- a/demos/parse-server/.env.example
+++ b/demos/parse-server/.env.example
@@ -1,7 +1,7 @@
-
 PORT = 1337;
 
-MORALIS_API_KEY = ''
+# Your Moralis Api key, that can be found in the dashboard. Keep this secret!
+MORALIS_API_KEY=''
 
 DATABASE_URI = 'mongodb://localhost:27017'
 
