--- a/demos/express-proxy/.env.example
+++ b/demos/express-proxy/.env.example
@@ -1,7 +1,4 @@
-
 PORT = 1337;
 
+# Your Moralis Api key, that can be found in the dashboard. Keep this secret!
 MORALIS_API_KEY = ''
-APP_NAME = 'Demo Express proxy'
-
-ALLOW_INSECURE_HTTP = 'true'
