--- a/demos/firebase-auth-ext/hosting/.env.example
+++ b/demos/firebase-auth-ext/hosting/.env.example
@@ -3,9 +3,9 @@
 # or
 # execute `firebase apps:sdkconfig` command in the project directory
 
-REACT_APP_FIREBASE_API_KEY=replace_me
-REACT_APP_FIREBASE_AUTH_DOMAIN=replace_me
-REACT_APP_FIREBASE_PROJECT_ID=replace_me
-REACT_APP_FIREBASE_STORAGE_BUCKET=replace_me
-REACT_APP_FIREBASE_MESSAGING_SENDER_ID=replace_me
-REACT_APP_FIREBASE_APP_ID=replace_me
+REACT_APP_FIREBASE_API_KEY = 'replace_me'
+REACT_APP_FIREBASE_AUTH_DOMAIN = 'replace_me'
+REACT_APP_FIREBASE_PROJECT_ID = 'replace_me'
+REACT_APP_FIREBASE_STORAGE_BUCKET = 'replace_me'
+REACT_APP_FIREBASE_MESSAGING_SENDER_ID = 'replace_me'
+REACT_APP_FIREBASE_APP_ID = 'replace_me'
