--- a/packages/client/firebaseAuthUtils/tsconfig.json
+++ b/packages/client/firebaseAuthUtils/tsconfig.json
@@ -1,9 +1,10 @@
 {
-  "extends": "../../tsconfig.package.json",
+  "extends": "../../../tsconfig.package.json",
   "compilerOptions": {
     "outDir": "./lib/",
     "declarationDir": "./lib/",
-    "rootDir": "./src"
+    "rootDir": "./src",
+    "lib": ["ESNext", "DOM"]
   },
   "include": ["src/**/*", "types/**/*"]
 }
