--- a/packages/client/firebaseAuthUtils/package.json
+++ b/packages/client/firebaseAuthUtils/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@moralisweb3/client-firebase-auth",
+  "name": "@moralisweb3/client-firebase-auth-utils",
   "author": "Moralis",
   "version": "2.5.5",
   "license": "MIT",
@@ -21,8 +21,6 @@
     "typescript": "^4.5.5"
   },
   "dependencies": {
-    "@firebase/functions": "^0.8.4",
-    "@firebase/auth": "^0.20.6",
-    "@firebase/app": "^0.7.32"
+    "firebase": "^9.10.0"
   }
 }
