--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -13,7 +13,9 @@
       "@moralisweb3/sol-utils",
       "@moralisweb3/evm-api",
       "@moralisweb3/sol-api",
-      "@moralisweb3/client-firebase-auth"
+      "@moralisweb3/client-firebase-auth-utils",
+      "@moralisweb3/client-firebase-evm-auth",
+      "@moralisweb3/client-firebase-sol-auth"
     ]
   ],
   "linked": [],
