--- a/demos/firebase-auth-ext/hosting/package.json
+++ b/demos/firebase-auth-ext/hosting/package.json
@@ -18,13 +18,19 @@
     "firebase": "^9.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "5.0.1",
     "typescript": "^4.8.3",
     "web-vitals": "^2.1.4"
   },
+  "devDependencies": {
+    "cross-env": "^7.0.3",
+    "react-app-rewired": "^2.2.1",
+    "@moralisweb3/eslint-config": "^1.0.0",
+    "eslint-plugin-etc": "^2.0.2"
+  },
   "scripts": {
     "lint": "eslint --ext .js,.ts ./src",
-    "build": "SKIP_PREFLIGHT_CHECK=true DISABLE_ESLINT_PLUGIN=true react-scripts build",
+    "build": "cross-env SKIP_PREFLIGHT_CHECK=true GENERATE_SOURCEMAP=false react-app-rewired build",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
