--- a/demos/cli/tsconfig.json
+++ b/demos/cli/tsconfig.json
@@ -1,9 +1,9 @@
 {
-  "extends": "../../tsconfig.package.json",
   "compilerOptions": {
     "module": "commonjs",
     "target": "es2017",
     "outDir": "./build/",
+    "declaration": true,
     "declarationDir": "./build/",
     "rootDir": "./src",
     "strict": true,
