--- a/demos/firebase-auth-ext/hosting/package.json
+++ b/demos/firebase-auth-ext/hosting/package.json
@@ -20,7 +20,11 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.8.3",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "assert": "^2.0.0",
+    "buffer": "^6.0.3",
+    "util": "^0.12.4",
+    "stream-browserify": "^3.0.0"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
