--- a/demos/nextjs/package.json
+++ b/demos/nextjs/package.json
@@ -26,8 +26,10 @@
     "@types/node": "18.0.6",
     "@types/react": "^18.0.18",
     "@types/react-dom": "^18.0.6",
-    "eslint": "8.20.0",
+    "eslint": "^8.22.0",
     "eslint-config-next": "12.2.3",
-    "typescript": "4.7.4"
+    "typescript": "4.7.4",
+    "@typescript-eslint/eslint-plugin": "^5.38.1",
+    "eslint-plugin-etc": "^2.0.2"
   }
 }
