--- a/demos/express-proxy/package.json
+++ b/demos/express-proxy/package.json
@@ -11,7 +11,8 @@
     "express": "^4.18.1",
     "express-rate-limit": "^6.5.1",
     "moralis": "^2.6.0",
-    "redis": "^4.2.0"
+    "redis": "^4.2.0",
+    "cors": "^2.8.5"
   },
   "devDependencies": {
     "@moralisweb3/eslint-config": "^1.0.0",
@@ -20,7 +21,9 @@
     "eslint": "^8.9.0",
     "eslint-plugin-import": "^2.26.0",
     "ts-node": "^10.9.1",
-    "typescript": "^4.7.4"
+    "typescript": "^4.7.4",
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.14"
   },
   "scripts": {
     "dev": "ts-node src/index.ts",
