--- a/demos/supabase-auth/tsconfig.json
+++ b/demos/supabase-auth/tsconfig.json
@@ -1,9 +1,16 @@
 {
-  "extends": "../../tsconfig.package.json",
   "compilerOptions": {
+    "module": "CommonJS",
+    "target": "es5",
+    "lib": ["ESNext"],
+    "skipLibCheck": true,
     "outDir": "./lib/",
+    "declaration": true,
     "declarationDir": "./lib/",
-    "rootDir": "./src"
+    "rootDir": "./src",
+    "strict": true,
+    "moduleResolution": "node",
+    "esModuleInterop": true
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules"]
