--- a/packages/evmUtils/package.json
+++ b/packages/evmUtils/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "@ethersproject/address": "^5.6.0",
+    "@ethersproject/bytes": "^5.7.0",
     "@ethersproject/transactions": "^5.6.0",
     "@moralisweb3/core": "^2.6.0"
   }
