--- a/packages/codegen/tsconfig.json
+++ b/packages/codegen/tsconfig.json
@@ -5,7 +5,11 @@
     "declarationDir": "./lib/",
     "rootDir": "./src",
     "resolveJsonModule": true,
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
+    "module": "es2022",
+    "moduleResolution": "Node"
   },
-  "include": ["src/**/*"]
+  "include": [
+    "src/**/*"
+  ]
 }
