--- a/demos/cli/package.json
+++ b/demos/cli/package.json
@@ -19,6 +19,7 @@
     "@typescript-eslint/eslint-plugin": "^5.12.0",
     "@typescript-eslint/parser": "^5.12.0",
     "eslint": "^8.9.0",
+    "eslint-plugin-etc": "^2.0.2",
     "eslint-plugin-import": "^2.26.0",
     "@types/node": "^18.7.14",
     "ts-node": "^10.9.1"
