--- a/demos/parse-server-migration/package.json
+++ b/demos/parse-server-migration/package.json
@@ -22,6 +22,7 @@
     "@typescript-eslint/parser": "^5.12.0",
     "axios": "^0.27.2",
     "eslint": "^8.9.0",
+    "eslint-plugin-etc": "^2.0.2",
     "eslint-plugin-import": "^2.26.0",
     "mongodb-runner": "^4.9.0",
     "prettier": "^2.7.1",
