--- a/demos/parse-server/package.json
+++ b/demos/parse-server/package.json
@@ -21,6 +21,7 @@
     "@typescript-eslint/eslint-plugin": "^5.12.0",
     "@typescript-eslint/parser": "^5.12.0",
     "eslint": "^8.9.0",
+    "eslint-plugin-etc": "^2.0.2",
     "eslint-plugin-import": "^2.26.0",
     "mongodb-runner": "^4.9.0",
     "prettier": "^2.7.1",
