--- a/demos/supabase-auth/package.json
+++ b/demos/supabase-auth/package.json
@@ -20,6 +20,7 @@
     "@typescript-eslint/eslint-plugin": "^5.12.0",
     "@typescript-eslint/parser": "^5.12.0",
     "eslint": "^8.9.0",
+    "eslint-plugin-etc": "^2.0.2",
     "eslint-plugin-import": "^2.26.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4",
