--- a/demos/supabase-auth/package.json
+++ b/demos/supabase-auth/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "demo-subabase-auth",
+  "name": "demo-supabase-auth",
   "version": "1.0.0",
   "main": "dist/index.js",
   "private": true,
