new firebase-streams demo.

--- a/package.json
+++ b/package.json
@@ -56,7 +56,8 @@
       "demos/*",
       "demos/firebase-proxy/*",
       "demos/firebase-auth/*",
-      "demos/firebase-auth-ext/*"
+      "demos/firebase-auth-ext/*",
+      "demos/firebase-streams-ext/*"
     ]
   },
   "resolutions": {
