--- a/demos/express-proxy/package.json
+++ b/demos/express-proxy/package.json
@@ -4,7 +4,7 @@
   "main": "dist/index.js",
   "private": true,
   "bin": {
-    "gen-proxy-express": "./lib/cli.js"
+    "gen-proxy-express": "./src/cli.js"
   },
   "dependencies": {
     "@moralisweb3/core": "^2.6.4",
