--- a/packages/streams/package.json
+++ b/packages/streams/package.json
@@ -31,6 +31,7 @@
     "typescript": "^4.5.5"
   },
   "dependencies": {
+    "@ethersproject/abi": "^5.7.0",
     "@moralisweb3/api-utils": "^2.6.5",
     "@moralisweb3/core": "^2.6.5",
     "@moralisweb3/evm-utils": "^2.6.5",
