--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@changesets/cli": "^2.22.0",
     "@moralisweb3/eslint-config": "^1.0.0",
     "@moralisweb3/typedoc-readme-theme": "^1.0.0",
+    "@phenomnomnominal/tsquery": "^5.0.0",
     "@types/estree": "^1.0.0",
     "@types/jest": "^27.4.0",
     "@typescript-eslint/eslint-plugin": "^5.30.0",
