--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "clean": "yarn nx run-many --target=clean --all",
     "test": "yarn nx run-many --target=test --all",
     "test:watch": "yarn nx run-many --target=test:watch --all",
-    "test:coverage": "yarn nx run-many test:coverage --parallel",
+    "test:coverage": "yarn nx run-many test:coverage --all",
     "format": "yarn prettier . \"**/*.+(js|ts|json)\" --write",
     "format:check": "yarn prettier . \"**/*.+(js|ts|json)\" --check",
     "release": "yarn build && changeset publish"
