ci: build and test in parallel

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -112,8 +112,6 @@ jobs:
         with:
           path: '**/node_modules'
           key: ${{ runner.os }}-modules-${{ hashFiles('**/yarn.lock') }}_C8
-      - name: Build
-        run: yarn build:clean
       - name: Test
         run: yarn test:coverage
       - name: Test coverage comment
@@ -122,5 +120,10 @@ jobs:
           title: Test coverage
           summary-title: Summary
           multiple-files: |
+            api-utils, ./packages/apiUtils/coverage/coverage-summary.json
+            auth, ./packages/auth/coverage/coverage-summary.json
+            core, ./packages/core/coverage/coverage-summary.json
+            evm-utils, ./packages/evmUtils/coverage/coverage-summary.json
             evm-utils, ./packages/evmUtils/coverage/coverage-summary.json
             sol-utils, ./packages/solUtils/coverage/coverage-summary.json
+            streams, ./packages/streams/coverage/coverage-summary.json
