--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -12,7 +12,7 @@
   ],
   "scripts": {
     "test": "echo 'not implemented'",
-    "test:coverage": "yarn run test --coverage",
+    "test:coverage": "echo 'not implemented'",
     "test:watch": "yarn run test --watch",
     "lint": "eslint . --ext .js,.ts,.tsx,jsx",
     "clean": "rm -rf lib && rm -rf tsconfig.tsbuildinfo && rm -rf ./node_modules/.cache/nx",
