--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -127,3 +127,4 @@ jobs:
             evm-utils, ./packages/evmUtils/coverage/coverage-summary.json
             sol-utils, ./packages/solUtils/coverage/coverage-summary.json
             streams, ./packages/streams/coverage/coverage-summary.json
+            integration, ./packages/integration/coverage/coverage-summary.json
