--- a/packages/integration/package.json
+++ b/packages/integration/package.json
@@ -11,7 +11,7 @@
   "scripts": {
     "test": "yarn jest --runInBand --detectOpenHandles --forceExit --no-cache --ci",
     "test:watch": "yarn jest --watch",
-    "test:coverage": "yarn jest --coverage",
+    "test:coverage": "yarn run test --coverage --coverageReporters json-summary",
     "lint": "eslint .",
     "clean": "rm -rf lib && rm -rf tsconfig.tsbuildinfo && rm -rf ./node_modules/.cache/nx"
   },
@@ -24,6 +24,7 @@
   "dependencies": {
     "@moralisweb3/core": "^2.6.5",
     "@moralisweb3/evm-api": "^2.6.5",
+    "@moralisweb3/sol-api": "^2.6.5",
     "@moralisweb3/evm-utils": "^2.6.5",
     "@moralisweb3/streams": "^2.6.5",
     "eventemitter3": "^4.0.7"
