--- a/demos/supabase-auth/.env.example
+++ b/demos/supabase-auth/.env.example
@@ -1,4 +1,4 @@
-SUPABASE_PUBLIC_ANON = ''
+SUPABASE_PUBLIC_ANON_KEY = ''
 SUPABASE_SERVICE_KEY = ''
 SUPABASE_URL = ''
 # Your Moralis Api key, that can be found in the dashboard. Keep this secret!
