--- a/packages/common/streamsUtils/package.json
+++ b/packages/common/streamsUtils/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@moralisweb3/streams",
+  "name": "@moralisweb3/common-streams-utils",
   "author": "Moralis",
   "version": "2.6.5",
   "license": "MIT",
@@ -16,27 +16,18 @@
     "test:watch": "yarn run test --watch",
     "lint": "eslint . --ext .js,.ts,.tsx,jsx",
     "clean": "rm -rf lib && rm -rf tsconfig.tsbuildinfo && rm -rf tsconfig.build.tsbuildinfo && rm -rf ./node_modules/.cache/nx",
-    "gen:api-types": "openapi-typescript https://api.moralis-streams.com/api-docs/swagger.json --output src/generated/types.ts",
-    "gen:api-types-beta": "openapi-typescript https://streams-api-stage.aws-prod-streams-master-1.moralis.io/api-docs/swagger.json --output src/generated/types.ts",
     "build": "tsc -p tsconfig.build.json",
     "dev": "tsc --watch"
   },
   "devDependencies": {
-    "@moralisweb3/streams-typings": "^1.0.5",
-    "@moralisweb3/test-utils": "1.0.0",
-    "@types/ethereumjs-util": "5.2.0",
     "eslint-plugin-jest": "^26.8.3",
     "jest": "^28.0.3",
-    "openapi-typescript": "^5.2.0",
     "prettier": "^2.5.1",
     "typescript": "^4.5.5"
   },
   "dependencies": {
-    "@moralisweb3/api-utils": "^2.6.5",
+    "@ethersproject/abi": "^5.7.0",
     "@moralisweb3/core": "^2.6.5",
-    "@moralisweb3/common-streams-utils": "^2.6.5",
-    "@moralisweb3/evm-utils": "^2.6.5",
-    "ethereumjs-util": "^7.1.0",
-    "web3-eth-abi": "^1.8.0"
+    "@moralisweb3/evm-utils": "^2.6.5"
   }
 }
