--- a/packages/codegen/package.json
+++ b/packages/codegen/package.json
@@ -18,6 +18,7 @@
     "inquirer-autocomplete-prompt": "^2.0.0",
     "lodash": "^4.17.21",
     "plop": "3.1.1",
-    "ts-morph": "^16.0.0"
+    "ts-morph": "^16.0.0",
+    "moralis": "^2.6.5"
   }
 }
