--- a/packages/moralis/package.json
+++ b/packages/moralis/package.json
@@ -16,6 +16,20 @@
     "build": "tsc",
     "dev": "tsc --watch"
   },
+  "exports": {
+    ".":  "./lib/index.js",
+    "./core":  "./lib/core/index.js",
+    "./evm-utils":  "./lib/evmUtils/index.js",
+    "./sol-utils":  "./lib/solUtils/index.js"
+  },
+  "typesVersions": {
+    "*": {
+      ".": ["lib/index.d.ts"],
+      "core": ["lib/core/index.d.ts"],
+      "evm-utils": ["lib/evmUtils/index.d.ts"],
+      "sol-utils": ["lib/solUtils/index.d.ts"]
+    }
+  },
   "dependencies": {
     "@moralisweb3/auth": "^2.6.6",
     "@moralisweb3/core": "^2.6.6",
