change utils package names

--- a/packages/evmUtils/package.json
+++ b/packages/evmUtils/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@moralisweb3/evm-utils",
+  "name": "@moralisweb3/common-evm-utils",
   "author": "Moralis",
   "version": "2.6.6",
   "license": "MIT",
