--- a/packages/moralis/package.json
+++ b/packages/moralis/package.json
@@ -44,8 +44,8 @@
     "@moralisweb3/streams": "^2.6.6",
     "@moralisweb3/api-utils": "^2.6.6",
     "@moralisweb3/evm-api": "^2.6.6",
-    "@moralisweb3/evm-utils": "^2.6.6",
+    "@moralisweb3/common-evm-utils": "^2.6.6",
     "@moralisweb3/sol-api": "^2.6.6",
-    "@moralisweb3/sol-utils": "^2.6.6"
+    "@moralisweb3/common-sol-utils": "^2.6.6"
   }
 }
