--- a/packages/solUtils/package.json
+++ b/packages/solUtils/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@moralisweb3/sol-utils",
+  "name": "@moralisweb3/common-sol-utils",
   "author": "Moralis",
   "version": "2.6.6",
   "license": "MIT",
