--- a/packages/moralis/package.json
+++ b/packages/moralis/package.json
@@ -19,6 +19,7 @@
   "exports": {
     ".": "./lib/index.js",
     "./core": "./lib/core/index.js",
+    "./stream-types": "./lib/streams/index.js",
     "./common-evm-utils": "./lib/evmUtils/index.js",
     "./common-sol-utils": "./lib/solUtils/index.js"
   },
@@ -35,6 +36,9 @@
       ],
       "common-sol-utils": [
         "lib/solUtils/index.d.ts"
+      ],
+      "stream-types": [
+        "lib/streams/index.d.ts"
       ]
     }
   },
