revery package name change

--- a/packages/solApi/package.json
+++ b/packages/solApi/package.json
@@ -28,6 +28,6 @@
   "dependencies": {
     "@moralisweb3/api-utils": "^2.6.6",
     "@moralisweb3/core": "^2.6.6",
-    "@moralisweb3/common-sol-utils": "^2.6.6"
+    "@moralisweb3/sol-utils": "^2.6.6"
   }
 }
