--- a/packages/apiUtils/package.json
+++ b/packages/apiUtils/package.json
@@ -22,7 +22,7 @@
   "devDependencies": {
     "prettier": "^2.5.1",
     "typescript": "^4.5.5",
-    "@moralisweb3/common-evm-utils": "^2.6.6"
+    "@moralisweb3/evm-utils": "^2.6.6"
   },
   "dependencies": {
     "@moralisweb3/core": "^2.6.6"
