--- a/packages/evmApi/package.json
+++ b/packages/evmApi/package.json
@@ -28,6 +28,6 @@
   "dependencies": {
     "@moralisweb3/api-utils": "^2.6.6",
     "@moralisweb3/core": "^2.6.6",
-    "@moralisweb3/common-evm-utils": "^2.6.6"
+    "@moralisweb3/evm-utils": "^2.6.6"
   }
 }
