--- a/packages/moralis/package.json
+++ b/packages/moralis/package.json
@@ -20,8 +20,8 @@
     ".": "./lib/index.js",
     "./core": "./lib/core/index.js",
     "./stream-types": "./lib/streams/index.js",
-    "./common-evm-utils": "./lib/evmUtils/index.js",
-    "./common-sol-utils": "./lib/solUtils/index.js"
+    "./common-evm-utils": "./lib/commonEvmUtils/index.js",
+    "./common-sol-utils": "./lib/commonSolUtils/index.js"
   },
   "typesVersions": {
     "*": {
@@ -32,10 +32,10 @@
         "lib/core/index.d.ts"
       ],
       "common-evm-utils": [
-        "lib/evmUtils/index.d.ts"
+        "lib/commonEvmUtils/index.d.ts"
       ],
       "common-sol-utils": [
-        "lib/solUtils/index.d.ts"
+        "lib/commonSolUtils/index.d.ts"
       ],
       "stream-types": [
         "lib/streams/index.d.ts"
