--- a/packages/moralis/package.json
+++ b/packages/moralis/package.json
@@ -50,6 +50,7 @@
     "@moralisweb3/evm-api": "^2.6.6",
     "@moralisweb3/evm-utils": "^2.6.6",
     "@moralisweb3/sol-api": "^2.6.6",
-    "@moralisweb3/sol-utils": "^2.6.6"
+    "@moralisweb3/sol-utils": "^2.6.6",
+    "@moralisweb3/streams-typings": "^1.0.5"
   }
 }
