--- a/demos/demo-express/package.json
+++ b/demos/demo-express/package.json
@@ -11,6 +11,7 @@
     "express": "^4.18.1",
     "express-rate-limit": "^6.5.1",
     "moralis": "^2.6.5",
+    "@moralisweb3/express": "^2.6.5",
     "redis": "^4.2.0",
     "cors": "^2.8.5"
   },
