--- a/packages/express/tsconfig.json
+++ b/packages/express/tsconfig.json
@@ -1,15 +1,9 @@
 {
   "extends": "../../tsconfig.package.json",
   "compilerOptions": {
-    "outDir": "./lib",
+    "outDir": "./lib/",
     "declarationDir": "./lib/",
-    "rootDir": "./src",
-    "resolveJsonModule": true,
-    "allowSyntheticDefaultImports": true,
-    "module": "es2022",
-    "moduleResolution": "Node"
+    "rootDir": "./src"
   },
-  "include": [
-    "src/**/*",
-  ]
+  "include": ["src/**/*", "types/**/*"]
 }
