--- a/demos/parse-server/package.json
+++ b/demos/parse-server/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@codemirror/language": "^0.20.0",
     "@moralisweb3/core": "^2.6.6",
+    "body-parser": "^1.20.1",
     "dotenv": "^16.0.1",
     "envalid": "7.3.1",
     "express": "^4.18.1",
