--- a/packages/common/evmUtils/package.json
+++ b/packages/common/evmUtils/package.json
@@ -17,7 +17,8 @@
     "lint": "eslint . --ext .js,.ts,.tsx,jsx",
     "clean": "rm -rf lib && rm -rf tsconfig.tsbuildinfo && rm -rf tsconfig.build.tsbuildinfo && rm -rf ./node_modules/.cache/nx",
     "build": "tsc -p tsconfig.build.json",
-    "dev": "tsc --watch"
+    "dev": "tsc --watch",
+    "gen:api-types": "openapi-typescript https://deep-index.moralis.io/api-docs-2.1/v2.1/swagger.json --output src/operations/openapi.ts"
   },
   "devDependencies": {
     "openapi-typescript": "^5.2.0",
