ci: fix common-evm-utils path

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -143,7 +143,7 @@ jobs:
             auth, ./packages/auth/coverage/coverage-summary.json
             core, ./packages/core/coverage/coverage-summary.json
             evm-api, ./packages/evmApi/coverage/coverage-summary.json
-            evm-utils, ./packages/evmUtils/coverage/coverage-summary.json
+            common-evm-utils, ./packages/common/evmUtils/coverage/coverage-summary.json
             sol-api, ./packages/solApi/coverage/coverage-summary.json
             sol-utils, ./packages/solUtils/coverage/coverage-summary.json
             common-streams-utils, ./packages/common/streamsUtils/coverage/coverage-summary.json
