--- a/packages/streams/package.json
+++ b/packages/streams/package.json
@@ -34,6 +34,7 @@
     "@moralisweb3/api-utils": "^2.6.7",
     "@moralisweb3/core": "^2.6.7",
     "@moralisweb3/common-evm-utils": "^2.6.7",
+    "@moralisweb3/common-streams-utils": "^2.6.7",
     "@moralisweb3/streams-typings": "^1.0.5",
     "ethereumjs-util": "^7.1.0",
     "web3-eth-abi": "^1.8.0"
