--- a/demos/parse-server/package.json
+++ b/demos/parse-server/package.json
@@ -29,6 +29,7 @@
     "typescript": "^4.7.4"
   },
   "scripts": {
+    "@moralisweb3/parse-server": "2.6.7",
     "dev": "ts-node src/index.ts",
     "build": "tsc",
     "gen:lockfile": "yarn install --mode update-lockfile",
