--- a/demos/parse-server/package.json
+++ b/demos/parse-server/package.json
@@ -8,6 +8,7 @@
     "@moralisweb3/core": "^2.6.7",
     "dotenv": "^16.0.1",
     "envalid": "7.3.1",
+    "ngrok": "^4.3.3",
     "express": "^4.18.1",
     "express-rate-limit": "^6.5.1",
     "graphql": "^16.6.0",
