--- a/packages/client/parseServer/package.json
+++ b/packages/client/parseServer/package.json
@@ -23,7 +23,7 @@
     "typescript": "^4.5.5"
   },
   "dependencies": {
-    "@moralisweb3/common-streams-utils": "^2.6.7",
+    "@moralisweb3/streams": "^2.6.7",
     "moralis": "^2.6.7",
     "parse": "3.4.4",
     "body-parser": "^1.20.0"
