--- a/demos/parse-server-migration/package.json
+++ b/demos/parse-server-migration/package.json
@@ -4,10 +4,12 @@
   "main": "dist/index.js",
   "private": true,
   "dependencies": {
+    "@moralisweb3/parse-server": "2.6.7",
     "@codemirror/language": "^0.20.0",
     "@moralisweb3/common-core": "^2.6.7",
     "@types/node": "^18.7.15",
     "dotenv": "^16.0.1",
+    "ngrok": "^4.3.3",
     "envalid": "7.3.1",
     "express": "^4.18.1",
     "express-rate-limit": "^6.5.1",
