--- a/packages/parseServer/package.json
+++ b/packages/parseServer/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "@moralisweb3/streams": "^2.6.7",
     "moralis": "^2.6.7",
+    "express": "^4.18.1",
     "parse": "3.4.4",
     "body-parser": "^1.20.0"
   }
