--- a/packages/codegen/tsconfig.json
+++ b/packages/codegen/tsconfig.json
@@ -6,9 +6,7 @@
     "rootDir": "./src",
     "resolveJsonModule": true,
     "allowSyntheticDefaultImports": true,
-    "module": "CommonJS",
+    "module": "CommonJS"
   },
-  "include": [
-    "src/**/*",
-  ]
+  "include": ["src/**/*"]
 }
