--- a/packages/streams/package.json
+++ b/packages/streams/package.json
@@ -35,7 +35,6 @@
     "@moralisweb3/core": "^2.7.0",
     "@moralisweb3/evm-utils": "^2.7.0",
     "@moralisweb3/streams-typings": "^1.0.5",
-    "ethereumjs-util": "^7.1.0",
-    "web3-eth-abi": "^1.8.0"
+    "ethereumjs-util": "^7.1.0"
   }
 }
