--- a/packages/codegen/package.json
+++ b/packages/codegen/package.json
@@ -19,6 +19,8 @@
     "lodash": "^4.17.21",
     "plop": "3.1.1",
     "ts-morph": "^16.0.0",
-    "moralis": "^2.6.5"
+    "moralis": "^2.6.5",
+    "type-plus": "4.15.2",
+    "@phenomnomnominal/tsquery": "5.0.0"
   }
 }
