--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "openapi-types": "^12.0.0",
     "prettier": "^2.7.1",
     "rdme": "^7.5.0",
+    "shelljs": "^0.8.5",
     "ts-jest": "^28.0.3",
     "typedoc": "^0.23.10",
     "typedoc-plugin-markdown": "^3.13.4",
