--- a/demos/parse-server-migration/.env.example
+++ b/demos/parse-server-migration/.env.example
@@ -14,3 +14,5 @@ REDIS_CONNECTION_STRING = 'redis://127.0.0.1:6379'
 RATE_LIMIT_TTL = 30
 RATE_LIMIT_AUTHENTICATED = 50
 RATE_LIMIT_ANONYMOUS = 20
+
+USE_STREAMS = true
