--- a/demos/parse-server-migration/package.json
+++ b/demos/parse-server-migration/package.json
@@ -15,6 +15,7 @@
     "graphql": "^16.6.0",
     "graphql-ws": "^5.10.1",
     "moralis": "^2.7.0",
+    "ngrok": "^4.3.3",
     "parse-server": "^5.2.7"
   },
   "devDependencies": {
