--- a/packages/moralis/package.json
+++ b/packages/moralis/package.json
@@ -4,7 +4,22 @@
   "version": "2.7.1",
   "license": "MIT",
   "private": false,
-  "keywords": ["ethereum", "binance", "avalanche", "fantom", "solana", "nft", "dapps", "blockchain", "crypto", "web3", "evm", "eth", "smart-contracts", "contracts"],
+  "keywords": [
+    "ethereum",
+    "binance",
+    "avalanche",
+    "fantom",
+    "solana",
+    "nft",
+    "dapps",
+    "blockchain",
+    "crypto",
+    "web3",
+    "evm",
+    "eth",
+    "smart-contracts",
+    "contracts"
+  ],
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
   "sideEffects": false,
