leave types in generated folder

--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -16,7 +16,7 @@
     "test:watch": "yarn run test --watch",
     "lint": "eslint . --ext .js,.ts,.tsx,jsx",
     "clean": "rm -rf lib && rm -rf tsconfig.tsbuildinfo && rm -rf tsconfig.build.tsbuildinfo && rm -rf ./node_modules/.cache/nx",
-    "gen:api-types": "openapi-typescript https://authapi.moralis.io/api-docs-json --output src/operations/openapi.ts",
+    "gen:api-types": "openapi-typescript https://authapi.moralis.io/api-docs-json --output src/generated/types.ts",
     "build": "tsc -p tsconfig.build.json",
     "dev": "tsc --watch"
   },
