--- a/packages/apiUtils/package.json
+++ b/packages/apiUtils/package.json
@@ -25,6 +25,8 @@
     "@moralisweb3/common-evm-utils": "^2.6.7"
   },
   "dependencies": {
-    "@moralisweb3/common-core": "^2.6.7"
+    "@moralisweb3/common-core": "^2.6.7",
+    "@moralisweb3/common-evm-utils": "^2.6.7",
+    "axios": "^0.27.2"
   }
 }
