--- a/packages/client/firebaseApiUtils/package.json
+++ b/packages/client/firebaseApiUtils/package.json
@@ -21,7 +21,8 @@
     "typescript": "^4.5.5"
   },
   "dependencies": {
-    "firebase": "^9.10.0",
+    "firebase": "^9.13.0",
+    "@firebase/functions": "^0.8.8",
     "@moralisweb3/common-core": "^2.6.7",
     "@moralisweb3/client-api-utils": "^2.6.7"
   }
