--- a/packages/client/firebaseAuthUtils/package.json
+++ b/packages/client/firebaseAuthUtils/package.json
@@ -21,6 +21,9 @@
     "typescript": "^4.5.5"
   },
   "dependencies": {
-    "firebase": "^9.10.0"
+    "firebase": "^9.13.0",
+    "@firebase/functions": "^0.8.8",
+    "@firebase/app": "^0.8.3",
+    "@firebase/auth": "^0.20.11"
   }
 }
