--- a/packages/client/firebaseEvmApi/package.json
+++ b/packages/client/firebaseEvmApi/package.json
@@ -21,9 +21,12 @@
     "typescript": "^4.5.5"
   },
   "dependencies": {
-    "firebase": "^9.10.0",
+    "firebase": "^9.13.0",
+    "@firebase/app": "^0.8.3",
+    "@firebase/functions": "^0.8.8",
     "@moralisweb3/common-core": "^2.6.7",
     "@moralisweb3/common-evm-utils": "^2.6.7",
-    "@moralisweb3/client-evm-api": "^2.6.7"
+    "@moralisweb3/client-evm-api": "^2.6.7",
+    "@moralisweb3/client-firebase-api-utils": "^2.6.7"
   }
 }
