--- a/packages/common/evmUtils/package.json
+++ b/packages/common/evmUtils/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "@ethersproject/address": "^5.6.0",
     "@ethersproject/transactions": "^5.6.0",
+    "@ethersproject/bytes": "^5.6.0",
     "@moralisweb3/common-core": "^2.6.7"
   }
 }
