--- a/packages/common/streamsUtils/package.json
+++ b/packages/common/streamsUtils/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "@ethersproject/abi": "^5.7.0",
     "@moralisweb3/common-core": "^2.6.5",
-    "@moralisweb3/common-evm-utils": "^2.6.5"
+    "@moralisweb3/common-evm-utils": "^2.6.5",
+    "@moralisweb3/streams-typings": "^1.0.5"
   }
 }
