--- a/demos/parse-server-migration/package.json
+++ b/demos/parse-server-migration/package.json
@@ -4,9 +4,9 @@
   "main": "dist/index.js",
   "private": true,
   "dependencies": {
-    "@moralisweb3/parse-server": "2.7.0",
+    "@moralisweb3/parse-server": "2.7.1",
     "@codemirror/language": "^0.20.0",
-    "@moralisweb3/core": "^2.7.0",
+    "@moralisweb3/common-core": "^2.7.0",
     "@types/node": "^18.7.15",
     "dotenv": "^16.0.1",
     "envalid": "7.3.1",
