--- a/demos/parse-server/package.json
+++ b/demos/parse-server/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "dependencies": {
     "@codemirror/language": "^0.20.0",
-    "@moralisweb3/core": "^2.7.1",
+    "@moralisweb3/common-core": "^2.7.1",
     "dotenv": "^16.0.1",
     "envalid": "7.3.1",
     "express": "^4.18.1",
