--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -29,8 +29,8 @@
   },
   "dependencies": {
     "@moralisweb3/api-utils": "^2.7.1",
-    "@moralisweb3/core": "^2.7.1",
-    "@moralisweb3/evm-utils": "^2.7.1",
-    "@moralisweb3/sol-utils": "^2.7.1"
+    "@moralisweb3/common-core": "^2.7.1",
+    "@moralisweb3/common-evm-utils": "^2.7.1",
+    "@moralisweb3/common-sol-utils": "^2.7.1"
   }
 }
