--- a/packages/common/evmUtils/package.json
+++ b/packages/common/evmUtils/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@moralisweb3/evm-utils",
+  "name": "@moralisweb3/common-evm-utils",
   "author": "Moralis",
   "version": "2.7.1",
   "license": "MIT",
@@ -27,6 +27,6 @@
   "dependencies": {
     "@ethersproject/address": "^5.6.0",
     "@ethersproject/transactions": "^5.6.0",
-    "@moralisweb3/core": "^2.7.1"
+    "@moralisweb3/common-core": "^2.7.1"
   }
 }
