--- a/packages/common/solUtils/package.json
+++ b/packages/common/solUtils/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@moralisweb3/sol-utils",
+  "name": "@moralisweb3/common-sol-utils",
   "author": "Moralis",
   "version": "2.7.1",
   "license": "MIT",
@@ -25,7 +25,7 @@
     "typescript": "^4.5.5"
   },
   "dependencies": {
-    "@moralisweb3/core": "^2.7.1",
+    "@moralisweb3/common-core": "^2.7.1",
     "@solana/web3.js": "^1.56.2"
   }
 }
