--- a/packages/evmApi/package.json
+++ b/packages/evmApi/package.json
@@ -27,7 +27,7 @@
   },
   "dependencies": {
     "@moralisweb3/api-utils": "^2.7.1",
-    "@moralisweb3/core": "^2.7.1",
-    "@moralisweb3/evm-utils": "^2.7.1"
+    "@moralisweb3/common-core": "^2.7.1",
+    "@moralisweb3/common-evm-utils": "^2.7.1"
   }
 }
