--- a/packages/moralis/package.json
+++ b/packages/moralis/package.json
@@ -34,7 +34,7 @@
   },
   "exports": {
     ".": "./lib/index.js",
-    "./core": "./lib/core/index.js",
+    "./common-core": "./lib/commonCore/index.js",
     "./streams-typings": "./lib/streamsTypings/index.js",
     "./common-evm-utils": "./lib/commonEvmUtils/index.js",
     "./common-sol-utils": "./lib/commonSolUtils/index.js"
@@ -44,8 +44,8 @@
       ".": [
         "lib/index.d.ts"
       ],
-      "core": [
-        "lib/core/index.d.ts"
+      "common-core": [
+        "lib/commonCore/index.d.ts"
       ],
       "common-evm-utils": [
         "lib/commonEvmUtils/index.d.ts"
@@ -60,13 +60,13 @@
   },
   "dependencies": {
     "@moralisweb3/auth": "^2.7.1",
-    "@moralisweb3/core": "^2.7.1",
+    "@moralisweb3/common-core": "^2.7.1",
     "@moralisweb3/streams": "^2.7.1",
     "@moralisweb3/api-utils": "^2.7.1",
     "@moralisweb3/evm-api": "^2.7.1",
-    "@moralisweb3/evm-utils": "^2.7.1",
+    "@moralisweb3/common-evm-utils": "^2.7.1",
     "@moralisweb3/sol-api": "^2.7.1",
-    "@moralisweb3/sol-utils": "^2.7.1",
+    "@moralisweb3/common-sol-utils": "^2.7.1",
     "@moralisweb3/streams-typings": "^1.0.5"
   }
 }
