--- a/packages/solApi/package.json
+++ b/packages/solApi/package.json
@@ -27,7 +27,7 @@
   },
   "dependencies": {
     "@moralisweb3/api-utils": "^2.7.1",
-    "@moralisweb3/core": "^2.7.1",
-    "@moralisweb3/sol-utils": "^2.7.1"
+    "@moralisweb3/common-core": "^2.7.1",
+    "@moralisweb3/common-sol-utils": "^2.7.1"
   }
 }
