fixes after merge.

--- a/packages/streams/package.json
+++ b/packages/streams/package.json
@@ -34,9 +34,11 @@
     "@moralisweb3/api-utils": "^2.7.1",
     "@moralisweb3/common-core": "^2.7.1",
     "@moralisweb3/common-evm-utils": "^2.7.1",
+    "@moralisweb3/common-streams-utils": "^2.7.1",
     "@moralisweb3/streams-typings": "^1.0.5",
     "ethereumjs-util": "^7.1.0",
     "web3-eth-abi": "^1.8.0",
-    "ethers": "^5.7.1"
+    "ethers": "^5.7.1",
+    "@ethersproject/abi": "^5.7.0"
   }
 }
