--- a/packages/parseServer/package.json
+++ b/packages/parseServer/package.json
@@ -23,7 +23,10 @@
     "typescript": "^4.5.5"
   },
   "dependencies": {
+    "@moralisweb3/common-core": "^2.7.1",
     "@moralisweb3/streams": "^2.7.1",
+    "@moralisweb3/api-utils": "^2.7.1",
+    "@moralisweb3/streams-typings": "^1.0.5",
     "moralis": "^2.7.1",
     "express": "^4.18.1",
     "parse": "3.4.4",
