not using streams

--- a/demos/parse-server-migration/.ebextensions/app.config
+++ b/demos/parse-server-migration/.ebextensions/app.config
@@ -9,5 +9,5 @@ option_settings:
     RATE_LIMIT_TTL: 30
     RATE_LIMIT_AUTHENTICATED: 50
     RATE_LIMIT_ANONYMOUS: 20
-    USE_STREAMS: true
+    USE_STREAMS: false
     STREAMS_WEBHOOK_URL: '/streams-webhook'
